<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <FrameLayout
        android:id="@+id/overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="220dp"
            android:src="@drawable/ululazmi"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:tint="@color/colorTint"
            />

        <TextView
            android:id="@+id/remaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="200dp"
            android:text="@string/time_remains"
            style="@style/textStyle"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            />
        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            style="@style/textStyle"
            android:layout_marginTop="-20dp"
            android:textSize="50sp"
            android:text="@string/hour"
            />
        <TextView
            android:id="@+id/date"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/date"
            style="@style/textStyle"
            android:drawableStart="@drawable/ic_date_range"
            android:gravity="center_vertical"
            android:drawablePadding="10dp"
            android:layout_marginBottom="30dp"
            />
        <TextView
            android:id="@+id/location"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/location"
            style="@style/textStyle"
            android:drawableStart="@drawable/ic_location"
            android:gravity="center_vertical"
            android:drawablePadding="10dp"
            android:layout_marginBottom="5dp"
            />
        <ImageButton
            android:id="@+id/stop"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/btn_circle"
            android:src="@drawable/ic_volume_up"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="5dp"
            />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/overview"
        android:padding="16dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageButton
                android:background="@drawable/btn_circle"
                android:layout_width="80dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_description_48dp"
                android:layout_height="80dp" />
            <TextView
                android:layout_marginTop="5dp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/activity"
                android:textStyle="bold"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageButton
                android:background="@drawable/btn_circle"
                android:layout_width="80dp"
                android:src="@drawable/ic_location_on_48dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="80dp" />
            <TextView
                android:layout_marginTop="5dp"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/closest"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageButton
                android:background="@drawable/btn_circle"
                android:layout_width="80dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_info_outline_48dp"
                android:layout_height="80dp" />
            <TextView
                android:layout_marginTop="5dp"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/info"
                />
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:layout_height="wrap_content"
        app:menu="@menu/navigation"
        app:itemIconTint="@android:color/white"
        app:itemTextColor="@android:color/white"
        />

</RelativeLayout>